--- a/src/views/bill/y-bill/fukuan.html
+++ b/src/views/bill/y-bill/fukuan.html
@@ -93,7 +93,7 @@
                                 <div class="layui-inline">
                                     <label class="layui-form-label">办理人</label>
                                     <div class="layui-input-inline">
-                                        <select name="TranSactor">
+                                        <select name="TranSactor" id="TranSactor">
                                             {{#  layui.each(d[0], function(index, item1){ }}
                                             <option value="{{item1.Id}}">{{item1.RealName}}</option>
                                             {{# });   }}  
