--- a/src/views/contract/y-contract/add.html
+++ b/src/views/contract/y-contract/add.html
@@ -531,6 +531,37 @@
                                     <option value="0">0天</option>
                                     <option value="1">1天</option>
                                     <option value="2">2天</option>
+                                    <option value="3">3天</option>
+                                    <option value="4">4天</option>
+                                    <option value="5">5天</option>
+                                    <option value="6">6天</option>
+                                    <option value="7">7天</option>
+                                    <option value="8">8天</option>
+                                    <option value="9">9天</option>
+                                    <option value="10">10天</option>
+
+                                    <option value="11">11天</option>
+                                    <option value="12">12天</option>
+                                    <option value="13">13天</option>
+                                    <option value="14">14天</option>
+                                    <option value="15">15天</option>
+                                    <option value="16">16天</option>
+                                    <option value="17">17天</option>
+                                    <option value="18">18天</option>
+                                    <option value="19">19天</option>
+                                    <option value="20">20天</option>
+                                    <option value="21">21天</option>
+                                    <option value="22">22天</option>
+
+                                    <option value="23">23天</option>
+                                    <option value="24">24天</option>
+                                    <option value="25">25天</option>
+                                    <option value="26">26天</option>
+                                    <option value="27">27天</option>
+                                    <option value="28">28天</option>
+                                    <option value="29">29天</option>
+                                    <option value="30">30天</option>
+                                    <option value="31">31天</option>
                                 </select>
                             </div>                          
                         
