--- a/src/views/contract/z-contract/index.html
+++ b/src/views/contract/z-contract/index.html
@@ -76,8 +76,8 @@
                     <div class="m-search-item">
                         <button class="layui-btn" lay-submit="" lay-filter="search">搜索</button>
                     </div>
-                    <div class="m-search-item">
-                        <a class="layui-btn layui-btn-primary"  href="" id="excel">导出</a>
+                    <div class="m-search-item" style="float:right;">
+                        <span class="layui-btn layui-btn-primary"  href="" id="excel">导出</span>
                     </div>
                     <div style="clear:both;"></div>
                 </form>
