--- a/src/views/house/h-house/InterView.html
+++ b/src/views/house/h-house/InterView.html
@@ -509,6 +509,10 @@ function formatterzhouqi(value) {
                              <div class="layui-input-inline"> 
                               <input type="text" name="email" autocomplete="off" class="layui-input gray" value="{{d[1].Price}}" disabled="" /> 
                              </div> 
+                             <label class="layui-form-label">成本价</label> 
+                             <div class="layui-input-inline"> 
+                              <input type="text" name="costprice" autocomplete="off" class="layui-input gray" value="{{d[1].costprice}}" disabled="" /> 
+                             </div> 
                             </div> 
                            </div> 
                            <div class="layui-form-item"> 
@@ -576,6 +580,12 @@ function formatterzhouqi(value) {
                                                 <input type="text" name="email" autocomplete="off" class="layui-input gray" value="{{d[2].CellName}}" disabled="" /> 
                                                </div> 
                                            </div> 
+                                           <div class="layui-inline"> 
+                                            <label class="layui-form-label">门店</label> 
+                                            <div class="layui-input-inline"> 
+                                             <input type="text" name="email" autocomplete="off" class="layui-input gray" value="{{doc.ns(d[2].store)}}" disabled="" /> 
+                                            </div> 
+                                        </div> 
                             </div>
                             <div class="layui-form-item"> 
                                     <div class="layui-inline"> 
@@ -605,9 +615,21 @@ function formatterzhouqi(value) {
                                   <input type="text" name="Status" id="Status" autocomplete="off"  class="layui-input gray" value="{{doc.ns(d[2].ProvinceName)}}{{d[2].CityName}}{{d[2].Adress}}" /> 
                                  </div> 
                                 </div> 
-                               
-                              
-                               </div>   
+                               </div>
+                               <div class="layui-form-item"> 
+                                    <div class="layui-inline"> 
+                                     <label class="layui-form-label">房管员</label> 
+                                     <div class="layui-input-inline"> 
+                                      <input type="text" name="Status" id="Status" autocomplete="off"  class="layui-input gray" disabled value="{{doc.ns(d[2].housekeepername)}}" /> 
+                                     </div> 
+                                    </div> 
+                                    <div class="layui-inline"> 
+                                            <label class="layui-form-label">电话</label> 
+                                            <div class="layui-input-inline"> 
+                                             <input type="text" name="Status" id="Status" autocomplete="off"  class="layui-input gray" disabled value="{{doc.ns(d[2].housekeeperphone)}}" /> 
+                                            </div> 
+                                    </div> 
+                                </div>     
                                <div class="title"> 
                                     <h3 class="red"> 图片信息</h3> 
                                    </div> 
