--- a/src/views/house/h-house/add.html
+++ b/src/views/house/h-house/add.html
@@ -134,7 +134,7 @@ img {
                 $('#CellName1').devbridgeAutocomplete({
                     lookup: function (query, done) { 
                         debugger;
-                        var city=$("#CityName1").val();
+                        var city=$("#CityName").val();
                         if(city==""){
                             layer.msg("请先选择城市");
                             return;
