--- a/src/views/bill/y-bill/index.html
+++ b/src/views/bill/y-bill/index.html
@@ -18,7 +18,7 @@
                         <input type="text" name="Content" autocomplete="off" class="layui-input" placeholder="小区名,房间号，姓名，手机号" id="CellName">
                      </div>
                      <div class="m-search-item" >
-                            <label class="layui-form-label">收租时间</label>
+                            <label class="layui-form-label">付款时间</label>
                             <div class="layui-input-inline" style="width: 144px;">
                                     <input type="text" name="BeginTime" autocomplete="off" class="layui-input" placeholder="开始时间" id="BeginTime">
                                 </div>
@@ -51,7 +51,9 @@
         {{#   });   }}
     </script>
     <script type="text/html" id="billbtnintable">
-            <ul class="layui-nav toolbar-nav">
+        
+            <ul class="layui-nav toolbar-nav" >
+                    
                 <li class="layui-nav-item">
                     <a href="javascript:;" class="show-more">操作</a>
                     <dl class="layui-nav-child"></dl>
@@ -66,9 +68,10 @@
     </div>
     <div class="layui-tab layui-tab-card" lay-filter="tabletab">
         <ul class="layui-tab-title" style="margin-bottom:0;">
-            <li value="2" class="layui-this">所有</li>
-            <li value="0">未完成</li>
+            <li value="0" class="layui-this">未完成</li>
             <li value="1">已完成</li>
+            <li value="2" >所有</li>
+            <li value="5" >暂停打款</li>
         </ul>
         <div class="layui-tab-content" style="padding:0px;margin:0px;">
             <table id="bill-main-table" lay-filter="demoEvent"></table>
