--- a/src/views/contract/y-contract/index.html
+++ b/src/views/contract/y-contract/index.html
@@ -46,6 +46,9 @@
                             <div class="m-search-item">
                                 <button class="layui-btn" lay-submit="" lay-filter="search">搜索</button>
                             </div>
+                            <div class="m-search-item" style="float:right;">
+                                <span class="layui-btn layui-btn-primary"  href="" id="excel">导出</span>
+                            </div>
                             <div style="clear:both;"></div>
                         </form>
                     </div>
@@ -76,6 +79,7 @@
                 <ul class="layui-tab-title" style="margin-bottom:0;">
                     <li value="0" class="layui-this">所有</li>
                     <li value="5">在租</li>
+                    <li value="6">即将到期</li>
                     <li value="4" >待搬入</li>
                     <li value="7">已退租</li>
                     <li value="9">退款中</li>
