--- a/src/views/house/h-house/edit.html
+++ b/src/views/house/h-house/edit.html
@@ -43,12 +43,14 @@ img {
                 alldata.push(data.numberData);
                 var image=alldata[1].PrivateImage;
                 var arr=new Array();
-                    if(image!=null){
+                debugger;
+                    if(image!=null&&image!="undefined"){
                     image=image.substring(0,image.length-1);
                     arr=image.split(';');
+                    imageurl=alldata[1].PrivateImage;
                 }
                 alldata.push(arr);
-                imageurl=alldata[1].PrivateImage;
+               
                 laytpl(getTpl).render(alldata, function (html) {
                 view.innerHTML = html;
                 doc.tjgd();
@@ -157,6 +159,11 @@ img {
                <div class="layui-input-inline"> 
                 <input type="text" name="Price" autocomplete="off" class="layui-input" value="{{d[1].Price}}"  /> 
                </div> 
+               
+               <label class="layui-form-label">成本价</label> 
+               <div class="layui-input-inline"> 
+                <input type="text" name="costprice" autocomplete="off" class="layui-input" value="{{d[1].costprice}}"  /> 
+               </div> 
               </div> 
              </div> 
              <div class="layui-form-item"> 
@@ -248,10 +255,7 @@ img {
 
             </div> 
           </div>
-</script>
-        
-       
-            
+         </script>
             <form class="layui-form layui-form-pane hcs-form" action=""> 
                     <div id="bill-edit-view1" class="child-view">
                         </div>
