--- a/src/views/house/rz/index.html
+++ b/src/views/house/rz/index.html
@@ -16,14 +16,15 @@
                      <div class="m-search-item" style="width:200px;">
                         <input type="text" name="content" autocomplete="off" class="layui-input" placeholder="内容" id="content">
                      </div>
-                 
                     <div class="m-search-item">
-                        <select name="type" lay-verify="" id="type">                          
-                           <option value="租客合同操作">租客合同操作</option>
-                           <option value="业主合同操作" >业主合同操作</option>
-                           <option value="新增房源" >新增房源</option>
-                           <option value="编辑房源" >编辑房源</option>
-                         
+                        <select name="type" lay-verify="" id="type" lay-filter="type">                            
+                            <option value="">操作类型</option>
+                            <option value="房源操作">房源操作</option>
+                            <option value="租客合同操作">租客合同操作</option>
+                            <option value="业主合同操作">业主合同操作</option>
+                            <option value="账单操作">账单操作</option>
+                            <option value="用电日志" >用电日志</option>
+                            <option value="家具日志" >家具日志</option>
                     </select>  
                     </div>
                     <div class="m-search-item" >
