--- a/src/views/house/z-house/InterView.html
+++ b/src/views/house/z-house/InterView.html
@@ -73,9 +73,10 @@
                 alldata.push(data.numberData);
                 doc.objectQuery(url, { "Id": id }, function (data) {
                 alldata.push(data.numberData);
+                debugger;
                   imageurl += alldata[1].PublicImg;
                   var arr=new Array();
-                  if(imageurl!=null){
+                  if(imageurl!=null&&imageurl!="undefined"){
                     imageurl=imageurl.substring(0,imageurl.length-1);
                     arr=imageurl.split(';');
                   }
@@ -474,6 +475,10 @@ function formatterzhouqi(value) {
                              <div class="layui-input-inline"> 
                               <input type="text" name="email" autocomplete="off" class="layui-input gray" value="{{d[1].Price}}" disabled="" /> 
                              </div> 
+                             <label class="layui-form-label">成本价</label> 
+                             <div class="layui-input-inline"> 
+                              <input type="text" name="costprice" autocomplete="off" class="layui-input gray" value="{{d[1].costprice}}" disabled="" /> 
+                             </div> 
                              <label class="layui-form-label" style="text-align:left;width:auto;">出租状态</label> 
                              <div class="layui-input-inline" style="width: 122px;"> 
                                 <input type="text" name="Status" id="Status" autocomplete="off" class="layui-input gray" value="{{formatterrecent(d[1].Status)}}" /> 
@@ -547,6 +552,10 @@ function formatterzhouqi(value) {
                                                <div class="layui-input-inline"> 
                                                 <input type="text" name="email" autocomplete="off" class="layui-input gray" value="{{d[1].CellName}}" disabled="" /> 
                                                </div> 
+                                               <label class="layui-form-label">门店</label> 
+                                               <div class="layui-input-inline"> 
+                                                <input type="text" name="email" autocomplete="off" class="layui-input gray" value="{{doc.ns(d[1].store)}}" disabled="" /> 
+                                               </div> 
                                            </div> 
                             </div>
                             <div class="layui-form-item"> 
@@ -570,7 +579,21 @@ function formatterzhouqi(value) {
                                 </div> 
                                
                               
-                               </div>   
+                               </div> 
+                               <div class="layui-form-item"> 
+                                    <div class="layui-inline"> 
+                                     <label class="layui-form-label">房管员</label> 
+                                     <div class="layui-input-inline"> 
+                                      <input type="text" name="Status" id="Status" autocomplete="off"  class="layui-input gray" disabled value="{{doc.ns(d[1].housekeepername)}}" /> 
+                                     </div> 
+                                    </div> 
+                                    <div class="layui-inline"> 
+                                            <label class="layui-form-label">电话</label> 
+                                            <div class="layui-input-inline"> 
+                                             <input type="text" name="Status" id="Status" autocomplete="off"  class="layui-input gray" disabled value="{{doc.ns(d[1].housekeeperphone)}}" /> 
+                                            </div> 
+                                    </div> 
+                                </div>   
                                <div class="title"> 
                                 <h3 class="red"> 图片信息</h3> 
                                </div>
