--- a/src/views/house/z-house/add.html
+++ b/src/views/house/z-house/add.html
@@ -133,7 +133,7 @@ img {
                 $('#CellName1').devbridgeAutocomplete({
                     lookup: function (query, done) { 
                         debugger;
-                        var city=$("#CityName1").val();
+                        var city=$("#CityName").val();
                         if(city==""){
                             layer.msg("请先选择城市");
                             return;
@@ -435,6 +435,10 @@ img {
                      <label class="layui-form-label">价格</label> 
                      <div class="layui-input-inline"> 
                       <input type="text" name="Price" autocomplete="off"  lay-verify="required|number" class="layui-input"   /> 
+                     </div> 
+                     <label class="layui-form-label">成本价</label> 
+                     <div class="layui-input-inline"> 
+                      <input type="text" name="costprice" autocomplete="off"  lay-verify="required|number" class="layui-input"   /> 
                      </div> 
                     </div> 
                     <div class="layui-inline"> 
