--- a/src/views/house/z-house/index.html
+++ b/src/views/house/z-house/index.html
@@ -5,10 +5,7 @@
     .layui-content{
         height: calc(100% - 30px);
     }
-    #view{
-        height: calc(100% - 100px);
-        overflow: auto;
-    }
+    
 </style>
 <body style="background-color:#ffffff;">
         <script id="demo" type="text/html">
@@ -115,18 +112,21 @@
                                  </div>
                                 <div class="m-search-item">
                                     <button class="layui-btn" lay-submit="" lay-filter="search">搜索</button>
+                                    <span class="searchresult"><span id="tao">0</span>套</span>
                                 </div> 
+                                <div class="m-search-item" style="margin-left:15px;">
+                                    <span class="layui-btn layui-btn-primary"
+                                    href="" id="excel" >导出</span>
+                                </div>
                     </form>
                     </div>
-                    <div class="layui-right-na m-row" id="all-row">
-                            <i class="layui-icon" style="font-size:27px;float: right;">&#xe61a;</i>
+                    <div class="" id="all-row">
+                        <i class="layui-icon" style="font-size:27px;float: right;">&#xe61a;</i>
                     </div>
-                    <div class="layui-right-na" style="padding-right:20px;" >
-                            <div id="house-othersrarch"></div>
-                       
+                    <div style="clear:both"></div>
+                    <div class="m-search" style="padding-right:20px;" >
+                        <div id="house-othersrarch"></div>
                     </div>
-            </div>
-            <div style="clear:both"></div>
             <div id="view" class="flow-default" style="height:100px;"></div>
            
 
