--- a/src/views/set/base/paypassword.html
+++ b/src/views/set/base/paypassword.html
@@ -1,6 +1,6 @@
 
 <title>系统设置</title>
-<link href="../../../../Content/Home.css" rel="stylesheet" />
+<link href="../../../../Content/hsc-form.css" rel="stylesheet" />
 <script src="../../../../Scripts/paypassword_business.js"></script>
 
 <link href="../../../../Content/money.css" rel="stylesheet" />
@@ -33,7 +33,10 @@
                     <input type="text" name="yzm" value="" lay-verify="required" autocomplete="off" placeholder=""  class="layui-input gray">
               </div>
               <div class="layui-input-inline">
-                      <button type="button" class="layui-btn layui-btn-primary layui-btn-fluid" id="LAY-user-getsmscode1">获取验证码</button>                                  </div>
+                      <button type="button" class="layui-btn layui-btn-primary layui-btn-fluid" id="LAY-user-getsmscode">获取验证码</button>
+                      <span class="time" id="timeout"><i>60</i>秒重新获取</span>
+                    
+                    </div>
               
       </div>  
          <div class="layui-form-item">
